Added a draw control to the first interactive map.

--- a/ipynb/satellite_analysis.ipynb
+++ b/ipynb/satellite_analysis.ipynb
@@ -230,12 +230,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import ipyleaflet\n",
     "map1 = ipyleaflet.Map(zoom=3, layout={'height':'400px'})\n",
+    "dc = ipyleaflet.DrawControl()\n",
+    "map1.add_control(dc)\n",
     "map1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get information from the map's drawing control.\n",
+    "dc.last_draw"
    ]
   },
   {
@@ -416,14 +430,7 @@
     "    data.set_index('time')\n",
     "    data = data.sort_values('datetime')\n",
     "    data = data[['datetime', 'ndvi']]\n",
-    "    return data\n",
-    "     \n",
-    "# # Get the selected coordinates from the map's drawing control.\n",
-    "# coords = dc.last_draw['geometry']['coordinates']\n",
-    "\n",
-    "# new_df = GetDataFrame(coords)\n",
-    "# new_df['datetime']\n",
-    "# new_df['ndvi']"
+    "    return data"
    ]
   },
   {
