Minor code formatting change.

--- a/ipynb/satellite_analysis.ipynb
+++ b/ipynb/satellite_analysis.ipynb
@@ -161,10 +161,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_image = ee.Image(l8sr.filterDate('2017-11-10', '2017-12-01')\n",
-    "                           .filterBounds(ee.Geometry.Point(-73.9957, 40.7262))\n",
-    "                           .first()\n",
-    "                      )\n",
+    "sample_image = ee.Image(\n",
+    "    l8sr.filterDate('2017-11-10', '2017-12-01')\n",
+    "        .filterBounds(ee.Geometry.Point(-73.9957, 40.7262))\n",
+    "        .first()\n",
+    ")\n",
     "pp.pprint(sample_image.getInfo())"
    ]
   },
